; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_recorder.c_recorder_rescale_packet.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_recorder.c_recorder_rescale_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.recorder = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.TYPE_4__** }
%struct.TYPE_4__ = type { i32 }

@SCRCPY_TIME_BASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.recorder*, i32*)* @recorder_rescale_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @recorder_rescale_packet(%struct.recorder* %0, i32* %1) #0 {
  %3 = alloca %struct.recorder*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  store %struct.recorder* %0, %struct.recorder** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.recorder*, %struct.recorder** %3, align 8
  %7 = getelementptr inbounds %struct.recorder, %struct.recorder* %6, i32 0, i32 0
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %10, i64 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  store %struct.TYPE_4__* %12, %struct.TYPE_4__** %5, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* @SCRCPY_TIME_BASE, align 4
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @av_packet_rescale_ts(i32* %13, i32 %14, i32 %17)
  ret void
}

declare dso_local i32 @av_packet_rescale_ts(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
